Fix alignmnet error in the WhatIDo section

--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -20,7 +20,7 @@
   width: 20em;
   aspect-ratio: 1;
   border-radius: 20px;
-  opacity: 0.6;
+  opacity: 0.8;
   display: none;
   position: relative;
 }
